# fpga-vaccel-tutorial-repo

./: README.md  config_virtio_accel.json  plugin_vadd.patch
app/: 0001-Libify-vector_add.patch  0002-Add-arguments-generalize-vector_add.patch  Makefile  wrapper  wrapper-args.c  wrapper-vaccel  wrapper.c  wrapper_exec-args.c  wrapper_exec.c
app/fpga_example/: CMakeLists.txt  README.md
app/fpga_example/sample/: CMakeLists.txt  _sample1.c  sample1.c
vaccelrt/: CMakeLists.txt  CMakeLists.txt.in  README.md
vaccelrt/bindings/: CMakeLists.txt
vaccelrt/bindings/rust-vaccel/: Cargo.toml  build.rs  wrapper.h
vaccelrt/bindings/rust-vaccel/src/: lib.rs  vaccel.rs
vaccelrt/examples/: CMakeLists.txt  classification.c  classification_generic.c  exec.c  exec_generic.c  mytestlib.c  noop.c
vaccelrt/plugins/: CMakeLists.txt
vaccelrt/plugins/exec/: CMakeLists.txt  vaccel.c
vaccelrt/plugins/jetson_inference/: CMakeLists.txt  operations.cpp  operations.h  util.cpp  util.h  vaccel.cpp
vaccelrt/plugins/noop/: CMakeLists.txt  vaccel.c
vaccelrt/plugins/virtio/: CMakeLists.txt  ioctl.c  ioctl.h  operations.c  operations.h  session.c  session.h  vaccel.c
vaccelrt/plugins/vsock/: Cargo.toml  build.rs  wrapper.h
vaccelrt/releases/: v0.1  v0.1.1
vaccelrt/src/: CMakeLists.txt  common.h  list.h  log.c  log.h  plugin.c  plugin.h  session.c  session.h  vaccel.c  vaccel.h  vaccel.pc.in
vaccelrt/src/ops/: blas.c  blas.h  exec.c  exec.h  genop.c  genop.h  image.c  image.h  noop.c  noop.h  vaccel_ops.h
vaccelrt/test/: CMakeLists.txt  test_backend.cpp
(+5 files in other folders)
